--- a/client/main.html
+++ b/client/main.html
@@ -1,12 +1,12 @@
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Juan Sebastián Barragán Jerónimo">
-  <meta name="description" content="Examen final">
+  <meta name="author" content="Juan Sebastián Barragán Jerónimo & Camilo Zambrano Votto">
+  <meta name="description" content="Proyecto final">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-  <title>Final</title>
+  <title>Alikeness</title>
 </head>
 <body>
     <div class="main" role="main" id="render-target"></div>
