--- a/client/main.html
+++ b/client/main.html
@@ -10,4 +10,5 @@
 </head>
 <body>
     <div class="main" role="main" id="render-target"></div>
+    <link rel="stylesheet" type="text/css" class="__meteor-css__" href="/merged-stylesheets.css">
 </body>
